--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -5,6 +5,7 @@ pydantic-settings==2.6.1
 sqlmodel==0.0.22
 SQLAlchemy==2.0.36
 alembic==1.14.0
-psycopg==3.2.3
+psycopg[binary]==3.3.2
 httpx==0.27.2
 apscheduler==3.10.4
+email-validator>=2.0.0
