--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -7,5 +7,9 @@ SQLAlchemy==2.0.36
 alembic==1.14.0
 psycopg[binary]==3.3.2
 httpx==0.27.2
+beautifulsoup4==4.12.3
 apscheduler==3.10.4
 email-validator>=2.0.0
+bleach==6.1.0
+passlib[bcrypt]==1.7.4
+python-jose[cryptography]==3.3.0
