Add about/settings pages and dashboard overview

--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -12,4 +12,5 @@ apscheduler==3.10.4
 email-validator>=2.0.0
 bleach==6.1.0
 passlib[bcrypt]==1.7.4
+bcrypt==3.2.2
 python-jose[cryptography]==3.3.0
